--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
   },
   "dependencies": {
     "react": "^15.6.1",
+    "react-autosuggest": "^9.3.2",
+    "react-datepicker": "^0.55.0",
     "react-dom": "^15.6.1",
     "react-redux": "^5.0.6",
     "react-router": "^4.2.0",
