--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
     "react-scripts": "1.0.13"
   },
   "dependencies": {
+    "chart.js": "^1.1.1",
     "react": "^15.6.1",
     "react-autosuggest": "^9.3.2",
+    "react-chartjs": "^0.8.0",
     "react-datepicker": "^0.55.0",
     "react-dom": "^15.6.1",
     "react-redux": "^5.0.6",
